# raylib-snake

./: CMakeLists.txt  README.md
src/: Game.cpp  main.cpp
src/include/: Game.hpp  Snake.hpp  SnakeAndFood.hpp
